# bruh.bot

./: .gitignore  Dockerfile  Dockerfile.api  Makefile  config.sample.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yaml
bot/: juno.py  settings.py
bot/api/: api.py
bot/cogs/: music.py  real_time_voice_cog.py  scheduler.py
bot/commands/: chat_command.py  describe_command.py  echo_command.py  image_admin_command.py  image_stats_command.py  ping_command.py  reply_command.py  sync_command.py
bot/services/: __init__.py  config_service.py  cooldown_service.py  discord_messages_service.py  embed_service.py  message_service.py  mongo_image_limit_service.py  mongo_morning_config_service.py  response_service.py
bot/services/ai/: __init__.py  ai_orchestrator.py  ai_service_factory.py  anthropic_service.py  base_service.py  google_service.py  image_generation_service.py  ollama_service.py  openai_service.py  real_time_audio_service.py  types.py
bot/services/music/: audio_service.py  music_player.py  music_queue_service.py  music_websocket_service.py  types.py
bot/utils/decarators/: admin_check.py  global_block_check.py  voice_check.py
frontend/: .cta.json  .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/app/: index.tsx  provider.tsx
frontend/src/components/: guild-selector.tsx  (+1 more)
scripts/: migrate_config_to_mongo.py  view_mongo_config.py
tools/: music_cli.py
(+67 files in other folders)
